# leptos-csr-quicklaunch

./: Cargo.toml  LICENSE_MIT  Makefile.toml  README.md  build.rs  cargo-generate.toml  index.html
src/: lib.rs  panic_hook.rs
