[package]
#name = "leptos-csr-quicklanuch"
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
#authors = ["Ratul Buragohain <ratul75@hotmail.com>"]
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "^0.6.5", features = ["csr"] }
wasm-bindgen = "^0.2.91"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "^0.3.41"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

#[[bin]]
#name = "cool-tool"
#path="src/main.rs"

